--- a/Client/BlazorApp/Pages/PersonDisplay.razor
+++ b/Client/BlazorApp/Pages/PersonDisplay.razor
@@ -33,7 +33,7 @@
         <div class="card-body">
             <h5 class="card-title">Contact Information</h5>
             <div><strong>Email:</strong> @personDetail.Email</div>
-                <div><strong>Telefonnummer:</strong> @personDetail.TelNummer</div>
+                <div><strong>Telefonnummer:</strong> @personDetail.PersonNummern</div>
         </div>
     </div>
 
@@ -115,8 +115,8 @@ else
     private string Vorname;
     private string Zwischenname;
     private string Email;
-    private string Telefonnummer;
-    private string Strasse;
+    // private string Telefonnummer;
+    private string TelNummer; private string Strasse;
     private string Hausnummer;
     private string PLZ;
     private string Stadt;
@@ -141,7 +141,11 @@ else
                 Vorname = existingPersonDetail.Vorname;
                 Zwischenname = existingPersonDetail.Zwischenname;
                 Email = existingPersonDetail.Email;
-                Telefonnummer = existingPersonDetail.TelNummer;
+                //Telefonnummer = existingPersonDetail.TelNummer;
+                @foreach (var telefonnummer in existingPersonDetail.PersonNummern)
+                {
+                    TelNummer = telefonnummer.TelNummer;
+                }
                 Hausnummer = existingPersonDetail.Hausnummer;
                 PLZ = existingPersonDetail.PLZ.ToString();
                 Stadt = existingPersonDetail.Stadt;
