--- a/Client/BlazorApp/Pages/Index.razor
+++ b/Client/BlazorApp/Pages/Index.razor
@@ -22,13 +22,14 @@
 
 <head>
     <!-- for the deopdown update , delete    -->
-    <link rel="stylesheet" href="_content/Blazorise/blazorise.css" />
-    <link rel="stylesheet" href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" />
+   @*  <link rel="stylesheet" href="_content/Blazorise/blazorise.css" />
+    <link rel="stylesheet" href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" /> *@
 
-    <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
-    <script src="_content/Blazorise/blazorise.js"></script>
-    <script src="_content/Blazorise.Bootstrap/blazorise.bootstrap.js"></script>
+@*     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
+ *@   @* <script src="_content/Blazorise/blazorise.js"></script>
 
+<script src="_content/Blazorise.Bootstrap/blazorise.bootstrap.js"></script> *@
+ 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
@@ -487,7 +488,7 @@ else
                         {
                             <div>@telefonnummer.TelNummer</div>
                         }
-                            </td>
+                         </td>
 @*                        <td>@person.Telefonnummer</td>
  *@                       <td>@person.Strasse</td>
                         <td>@person.Hausnummer</td>
@@ -578,7 +579,8 @@ else
                 table.AddCell(new PdfPCell(new Phrase(person.Nachname, smallFont)) { BackgroundColor = (i % 2 == 0 ? evenBgColor : oddBgColor) });
                 table.AddCell(new PdfPCell(new Phrase(person.Zwischenname, smallFont)) { BackgroundColor = (i % 2 == 0 ? evenBgColor : oddBgColor) });
                 table.AddCell(new PdfPCell(new Phrase(person.Email, smallFont)) { BackgroundColor = (i % 2 == 0 ? evenBgColor : oddBgColor) });
-                table.AddCell(new PdfPCell(new Phrase(person.TelNummer, smallFont)) { BackgroundColor = (i % 2 == 0 ? evenBgColor : oddBgColor) });
+                var telefonnummern = string.Join(", ", person.PersonNummern.Select(p => p.TelNummer));
+                table.AddCell(new PdfPCell(new Phrase(telefonnummern, smallFont)) { BackgroundColor = (i % 2 == 0 ? evenBgColor : oddBgColor) });
                 table.AddCell(new PdfPCell(new Phrase(person.Strasse, smallFont)) { BackgroundColor = (i % 2 == 0 ? evenBgColor : oddBgColor) });
                 table.AddCell(new PdfPCell(new Phrase(person.Hausnummer, smallFont)) { BackgroundColor = (i % 2 == 0 ? evenBgColor : oddBgColor) });
                 table.AddCell(new PdfPCell(new Phrase(person.PLZ.ToString(), smallFont)) { BackgroundColor = (i % 2 == 0 ? evenBgColor : oddBgColor) });
@@ -618,7 +620,7 @@ else
                 nachname = person.Nachname,
                 vorname = person.Vorname,
                 zwischenname = person.Zwischenname,
-                telefonnummer = person.TelNummer,
+                telefonnummer = person.PersonNummern,
                 eMail = person.Email,
                 strasse = ReplaceUnicodeEscapeSequences(person.Strasse), // Replace Unicode escape sequences
                 hausnummer = person.Hausnummer,
