--- a/Client/BlazorApp/Pages/_Host.cshtml
+++ b/Client/BlazorApp/Pages/_Host.cshtml
@@ -7,13 +7,13 @@
 <html lang="en">
 <head>
 
-    <script src="js/custom.js"></script>
+@*     <script src="js/custom.js"></script>
+ *@
+@*     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-M/7k0Y42j6hE7d7x/y3bYv8GsL2IdSqGmw+J4IytwuEi1DyZVMuHlwzuLhGJcJkJp2XHtPBH+iXe/BOAE10I8Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+ *@ 
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-M/7k0Y42j6hE7d7x/y3bYv8GsL2IdSqGmw+J4IytwuEi1DyZVMuHlwzuLhGJcJkJp2XHtPBH+iXe/BOAE10I8Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-GyaJ1FKPhORz5hVXbFLaS6hFChVv6m3zUZ5hXHAKF3v/eUtLohrv96XTtKD8XlfyJKa7vTlG8UP1ePWrDwcazA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+@*     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-GyaJ1FKPhORz5hVXbFLaS6hFChVv6m3zUZ5hXHAKF3v/eUtLohrv96XTtKD8XlfyJKa7vTlG8UP1ePWrDwcazA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+ *@
 
 
 
@@ -27,13 +27,17 @@
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 
 
-
+@* 
     <link rel="stylesheet" href="_content/Blazorise/blazorise.css" />
-    <link rel="stylesheet" href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" />
+    <link rel="stylesheet" href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" /> *@
 
-    <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
-    <script src="_content/Blazorise/blazorise.js"></script>
-    <script src="_content/Blazorise.Bootstrap/blazorise.bootstrap.js"></script>
+@*     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
+ *@   
+    @* <script src="_content/Blazorise/blazorise.js"></script>
+
+    <script src="_content/Blazorise.Bootstrap/blazorise.bootstrap.js"></script> *@
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
