--- a/Client/BlazorApp/Pages/Android.razor
+++ b/Client/BlazorApp/Pages/Android.razor
@@ -443,10 +443,11 @@ else
         bool confirmed = await JSRuntime.InvokeAsync<bool>("confirm", "Are you sure you want to delete this person?");
         if (confirmed)
         {
-            var deleteresponse = await PersonService.DeletePerson(new AddUpdatePersonRequest
-                {
-                    Id = personId
-                });
+            var deleteresponse = await PersonService.DeletePerson(personId
+                // {
+                //     Id = personId
+                // }
+                );
 
             if (deleteresponse.Success)
             {
