--- a/Client/BlazorApp/Pages/AddUpdatePerson.razor
+++ b/Client/BlazorApp/Pages/AddUpdatePerson.razor
@@ -47,26 +47,30 @@
     <div class="mt-3 form-group mx-2">
         <label>Gender</label>
         <div class="d-flex flex-row">
-            <div class="form-check mr-3 mx-3">
-                <input checked="@(gender == "Male")" @onchange="@(()=>SetGender("Male"))" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                <label class="form-check-label" for="flexRadioDefault1">
-                    Male
-                </label>
-            </div>
-            <div class="form-check mr-3 mx-3">
-                <input checked="@(gender == "Female")" @onchange="@(()=>SetGender("Female"))" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-                <label class="form-check-label" for="flexRadioDefault2">
-                    Female
-                </label>
-            </div>
-            <div class="form-check mx-3">
-                <input checked="@(gender == "Divers")" @onchange="@(()=>SetGender("Divers"))" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
-                <label class="form-check-label" for="flexRadioDefault3">
-                    Divers
-                </label>
-            </div>
+
+            @foreach (var g in genders)
+            {
+                <div class="form-check mr-3 mx-3">
+                    <input checked="@(gender == g)" @onchange="@(()=>SetGender(g))" class="form-check-input" type="radio" name="flexRadioDefault" id="@($"flexRadioDefault_{g}")">
+                    <label class="form-check-label" for="@($"flexRadioDefault_{g}")">
+                        @g
+                    </label>
+                </div>
+            }
+
+            @if (gender == null || !genders.Contains(gender))
+            {
+                <div class="form-check mr-3 mx-3">
+                    <input checked="@(gender == gender)" @onchange="@(()=>SetGender(gender))" class="form-check-input" type="radio" name="flexRadioDefault" id="@($"flexRadioDefault_{gender}")">
+                    <label class="form-check-label" for="@($"flexRadioDefault_{gender}")">
+                        @gender
+                    </label>
+                </div>
+            }
+            
         </div>
     </div>
+
 
     <div class=" mt-2 form-group mx-2 ">
         <label for="Entry_Email">Email</label>
@@ -195,13 +199,7 @@
 
 @code {
 
-   //private List<PersonModel.Telefonnummer> PersonNummern = new List<PersonModel.Telefonnummer>();
-
-    
     private List<PersonModel.Telefonnummer> PersonNummern = new List<PersonModel.Telefonnummer> { new PersonModel.Telefonnummer() };
-       
-    
-
 
     private void AddPhoneNumber()
     {
@@ -231,9 +229,23 @@
     private string Land;
     private string gender;
 
-    private void SetGender(string gender)
+    List<string> genders = new List<string> { "Male", "Female", "Divers" }; // Predefined genders
+
+    private void SetGender(string selectedGender)
     {
-        this.gender = gender;
+        if (genders.Contains(selectedGender) || selectedGender == gender)
+        {
+            gender = selectedGender;
+        }
+        else
+        {
+            // Reset gender or show an error message.
+        }
+    }
+
+    private bool IsGenderSelected()
+    {
+        return gender == "Male" || gender == "Female" || gender == "Divers";
     }
 
     protected override async Task OnInitializedAsync()
@@ -284,6 +296,23 @@
                 {
                     Icon = SweetAlertIcon.Error,
                     Text = "Invalid Nachname.",
+                    CustomClass = new SweetAlertCustomClass
+                    {
+                        Popup = "my-custom-popup-class",
+                        Content = "my-custom-content-class",
+                        ConfirmButton = "my-custom-confirm-button-class",
+                    }
+                });
+            return;
+
+        }
+
+        if (!IsGenderSelected())
+        {
+            await Swal.FireAsync(new SweetAlertOptions
+                {
+                    Icon = SweetAlertIcon.Error,
+                    Text = "Please select a gender.",
                     CustomClass = new SweetAlertCustomClass
                     {
                         Popup = "my-custom-popup-class",
@@ -414,44 +443,21 @@
 
         }
 
-        if (!IsValidEmail(Email))
-        {
-
-            await Swal.FireAsync(new SweetAlertOptions
-                {
-                    Icon = SweetAlertIcon.Error,
-                    Text = "Email has to be valid",
-
-                    CustomClass = new SweetAlertCustomClass
-                    {
-                        Popup = "my-custom-popup-class",
-
-                        Content = "my-custom-content-class",
-                        ConfirmButton = "my-custom-confirm-button-class",
-                    }
-
-
-
-                });
-            return;
-        }
-
         var addUpdateRequest = new AddUpdatePersonRequest
-            {
+        {
                 Id = Id,
                 Nachname = Nachname,
                 Vorname = Vorname,
                 Zwischenname = Zwischenname,
                 Email = Email,
                 PersonNummern = PersonNummern,
-                // .Select(t => new PersonModel.Telefonnummer { TelNummer = t.TelNummer }).ToList(),
                 Strasse = Strasse,
                 Hausnummer = Hausnummer,
                 PLZ = PLZ,
                 Stadt = Stadt,
                 Land = Land,
                 Gender = gender,
-            };
+        };
 
         if (Id > 0)
         {
@@ -462,7 +468,7 @@
                 NavManager.NavigateTo("/"); // Redirect to the list page after update
 
                 await Swal.FireAsync(new SweetAlertOptions
-                    {
+                {
                         Icon = SweetAlertIcon.Success,
                         Text = "Contact Updated",
 
@@ -474,7 +480,7 @@
                             ConfirmButton = "my-custom-confirm-button-class",
                         }
 
-                    });
+                });
             }
             else
             {
@@ -494,7 +500,7 @@
                 NavManager.NavigateTo("/"); // Redirect to the list page after add
 
                 await Swal.FireAsync(new SweetAlertOptions
-                    {
+                {
                         Icon = SweetAlertIcon.Success,
                         Text = "Contact Added Successfully",
 
@@ -506,14 +512,12 @@
                             ConfirmButton = "my-custom-confirm-button-class",
                         }
 
-                    });
+                });
 
             }
-            else
-            {
-                await JSRuntime.InvokeVoidAsync("alert", response.ErrorMessage);
-            }
+            
         }
+
     }
 
     private bool IsValidNachname(string value)
